docs(troubleshooting): add more tips

--- a/documentation/docs/12-troubleshooting.mdx
+++ b/documentation/docs/12-troubleshooting.mdx
@@ -11,9 +11,27 @@ tags:
 
 You can find here small tips and known issues/frequently asked questions that may help you to get through this action.
 
-### The logs indicate that your issue or pull request has missing data?
+## How do I test without altering my repository?
+
+You can use the [dry-run](dry-run-input) input to `true`.  
+The workflow will work normally, but each time a mutation should occur, it will simply omit it.
+
+You can also limit the quantity of mutations by using the [issue-limit-api-mutations-count](issues/inputs/issue-limit-api-mutations-count-input) and the [pull-request-limit-api-mutations-count](pull-requests/inputs/pull-request-limit-api-mutations-count-input) inputs.
+
+Lastly, you could only start to process your issues and pull requests from a specific date with the [issue-ignore-before-creation-date](issues/inputs/issue-ignore-before-creation-date-input) and the [pull-request-ignore-before-creation-date](pull-requests/inputs/pull-request-ignore-before-creation-date-input) inputs.
+
+## How do I see all the logs?
+
+Enable the debug mode for the actions by adding the `ACTIONS_STEP_DEBUG` GitHub secret to `true` in your repository.  
+Follow this [documentation](https://github.com/actions/toolkit/blob/main/docs/action-debugging.md#how-to-access-step-debug-logs) if you need more details.
+
+## The logs indicate that my issue or pull request has missing data
 
 Make sure to use the proper [GitHub token](github-token-input), and that it has all the required [permissions](https://docs.github.com/en/rest/reference/permissions-required-for-github-apps) to be able to fetch all the information.  
 See the [original discussion](https://github.com/Sonia-corporation/stale/issues/498) to have more information.
 
+:::tip
+
 You still didn't find a way to solve your trouble? Checkout the [need help page](need-help)!
+
+:::
