--- a/documentation/i18n/fr/code.json
+++ b/documentation/i18n/fr/code.json
@@ -274,5 +274,35 @@
   "theme.IdealImageMessage.error": {
     "message": "Erreur. Cliquez pour rechargé",
     "description": "When the image fails to load for unknown error"
+  },
+  "theme.blog.post.readMoreLabel": {
+    "message": "Lire plus à propos de {title}",
+    "description": "The ARIA label for the link to full blog posts from excerpts"
+  },
+  "theme.docs.DocCard.categoryDescription": {
+    "message": "{count} items",
+    "description": "The default description for a category card in the generated index about how many items this category includes"
+  },
+  "theme.docs.versionBadge.label": {
+    "message": "Version : {versionLabel}"
+  },
+  "theme.colorToggle.ariaLabel": {
+    "message": "Inverse entre le mode jour et nuit (pour le moment {mode})",
+    "description": "The ARIA label for the navbar color mode toggle"
+  },
+  "theme.colorToggle.ariaLabel.mode.dark": {
+    "message": "mode nuit",
+    "description": "The name for the dark color mode"
+  },
+  "theme.colorToggle.ariaLabel.mode.light": {
+    "message": "mode jour",
+    "description": "The name for the light color mode"
+  },
+  "theme.navbar.mobileLanguageDropdown.label": {
+    "message": "Langues",
+    "description": "The label for the mobile language switcher dropdown"
+  },
+  "theme.SearchBar.seeAll": {
+    "message": "Voir tous {count} les résultats"
   }
 }
