feat(input): add new inputs to ignore any project cards
Add the `issue-ignore-any-project-cards` input.
Add the `pull-request-ignore-any-project-cards` input.
In addition of the existing input to ignore when a project card is present, now you can choose a white-list instead.
Any item process that belong to those project cards will be ignored.
Closes #165

--- a/documentation/docs/03-all-inputs.mdx
+++ b/documentation/docs/03-all-inputs.mdx
@@ -23,6 +23,7 @@ The list of all the inputs.
 | [issue-ignore-all-assignees](issues/inputs/issue-ignore-all-assignees-input)                                    | Allow to ignore the processing of issues that contains any assignees.                                                                                  | `false`               |
 | [issue-ignore-any-assignees](issues/inputs/issue-ignore-any-assignees-input)                                    | Allow to ignore the processing of issues that contains one of those assignees (multiline).                                                             |                       |
 | [issue-ignore-all-project-cards](issues/inputs/issue-ignore-all-project-cards-input)                            | Allow to ignore the processing of issues that contains any project cards.                                                                              | `false`               |
+| [issue-ignore-any-project-cards](issues/inputs/issue-ignore-any-project-cards-input)                            | Allow to ignore the processing of issues that contains one of those project cards (multiline).                                                         |                       |
 | [issue-ignore-before-creation-date](issues/inputs/issue-ignore-before-creation-date-input)                      | Allow to ignore the processing of issues that were created before this date ([ISO 8601](https://moment.github.io/luxon/#/parsing?id=iso-8601)).        |                       |
 | [issue-days-before-stale](issues/inputs/issue-days-before-stale-input)                                          | The number of days until the issue is considered as stale.                                                                                             | `30`                  |
 | [issue-stale-comment](issues/inputs/issue-stale-comment-input)                                                  | The comment that will be sent once the issue is stale (keep empty to not send a comment).                                                              |                       |
@@ -41,6 +42,7 @@ The list of all the inputs.
 | [pull-request-ignore-all-assignees](pull-requests/inputs/pull-request-ignore-all-assignees-input)               | Allow to ignore the processing of pull requests that contains any assignees.                                                                           | `false`               |
 | [pull-request-ignore-any-assignees](pull-requests/inputs/pull-request-ignore-any-assignees-input)               | Allow to ignore the processing of pull requests that contains one of those assignees (multiline).                                                      |                       |
 | [pull-request-ignore-all-project-cards](pull-requests/inputs/pull-request-ignore-all-project-cards-input)       | Allow to ignore the processing of pull requests that contains any project cards.                                                                       | `false`               |
+| [pull-request-ignore-any-project-cards](pull-requests/inputs/pull-request-ignore-any-project-cards-input)       | Allow to ignore the processing of pull requests that contains one of those project cards (multiline).                                                  |                       |
 | [pull-request-ignore-before-creation-date](pull-requests/inputs/pull-request-ignore-before-creation-date-input) | Allow to ignore the processing of pull requests that were created before this date ([ISO 8601](https://moment.github.io/luxon/#/parsing?id=iso-8601)). |                       |
 | [pull-request-ignore-draft](pull-requests/inputs/pull-request-ignore-draft-input)                               | Allow to ignore the processing of pull requests that are drafts.                                                                                       | `false`               |
 | [pull-request-days-before-stale](pull-requests/inputs/pull-request-days-before-stale-input)                     | The number of days until the pull request is considered as stale.                                                                                      | `30`                  |
