--- a/documentation/docs/08-pull-requests/01-inputs/01-all-inputs.mdx
+++ b/documentation/docs/08-pull-requests/01-inputs/01-all-inputs.mdx
@@ -18,6 +18,7 @@ The list of all the pull requests inputs.
 | [pull-request-ignore-all-assignees](pull-request-ignore-all-assignees-input)               | Allow to ignore the processing of pull requests that contains any assignees.                                                                           | `false` |
 | [pull-request-ignore-any-assignees](pull-request-ignore-any-assignees-input)               | Allow to ignore the processing of pull requests that contains one of those assignees (multiline).                                                      |         |
 | [pull-request-ignore-all-project-cards](pull-request-ignore-all-project-cards-input)       | Allow to ignore the processing of pull requests that contains any project cards.                                                                       | `false` |
+| [pull-request-ignore-any-project-cards](pull-request-ignore-any-project-cards-input)       | Allow to ignore the processing of pull requests that contains one of those project cards (multiline).                                                  |         |
 | [pull-request-ignore-before-creation-date](pull-request-ignore-before-creation-date-input) | Allow to ignore the processing of pull requests that were created before this date ([ISO 8601](https://moment.github.io/luxon/#/parsing?id=iso-8601)). |         |
 | [pull-request-ignore-draft](pull-request-ignore-draft-input)                               | Allow to ignore the processing of pull requests that are drafts.                                                                                       | `false` |
 | [pull-request-days-before-stale](pull-request-days-before-stale-input)                     | The number of days until the pull request is considered as stale.                                                                                      | `30`    |
