--- a/documentation/docs/06-issues/01-inputs/01-all-inputs.mdx
+++ b/documentation/docs/06-issues/01-inputs/01-all-inputs.mdx
@@ -18,6 +18,7 @@ The list of all issues the inputs.
 | [issue-ignore-all-assignees](issue-ignore-all-assignees-input)               | Allow to ignore the processing of issues that contains any assignees.                                                                           | `false` |
 | [issue-ignore-any-assignees](issue-ignore-any-assignees-input)               | Allow to ignore the processing of issues that contains one of those assignees (multiline).                                                      |         |
 | [issue-ignore-all-project-cards](issue-ignore-all-project-cards-input)       | Allow to ignore the processing of issues that contains any project cards.                                                                       | `false` |
+| [issue-ignore-any-project-cards](issue-ignore-any-project-cards-input)       | Allow to ignore the processing of issues that contains one of those project cards (multiline).                                                  |         |
 | [issue-ignore-before-creation-date](issue-ignore-before-creation-date-input) | Allow to ignore the processing of issues that were created before this date ([ISO 8601](https://moment.github.io/luxon/#/parsing?id=iso-8601)). |         |
 | [issue-days-before-stale](issue-days-before-stale-input)                     | The number of days until the issue is considered as stale.                                                                                      | `30`    |
 | [issue-stale-comment](issue-stale-comment-input)                             | The comment that will be sent once the issue is stale (keep empty to not send a comment).                                                       |         |
