--- a/documentation/docs/08-pull-requests/01-inputs/01-all-inputs.mdx
+++ b/documentation/docs/08-pull-requests/01-inputs/01-all-inputs.mdx
@@ -34,3 +34,4 @@ The list of all the pull requests inputs.
 | [pull-request-limit-api-mutations-count](pull-request-limit-api-mutations-count-input)     | Limit the quantity of API mutations calls performed during the processing of pull requests (-1 for unlimited).                                         | `-1`    |
 | [pull-request-only-any-project-cards](pull-request-only-any-project-cards-input)           | Only allow the processing of pull requests that contains one of those project cards (multiline).                                                       |         |
 | [pull-request-only-any-milestones](pull-request-only-any-milestones-input)                 | Only allow the processing of pull requests that contains one of those milestones (multiline).                                                          |         |
+| [pull-request-ignore-any-milestones](pull-request-ignore-any-milestones-input)             | Allow to ignore the processing of pull requests that contains one of those milestones (multiline).                                                     |         |
