--- a/documentation/docs/03-all-inputs.mdx
+++ b/documentation/docs/03-all-inputs.mdx
@@ -37,6 +37,7 @@ The list of all the inputs.
 | [issue-only-any-project-cards](issues/inputs/issue-only-any-project-cards-input)                                | Only allow the processing of issues that contains one of those project cards (multiline).                                                              |                       |
 | [issue-only-any-milestones](issues/inputs/issue-only-any-milestones-input)                                      | Only allow the processing of issues that contains one of those milestones (multiline).                                                                 |                       |
 | [issue-ignore-any-milestones](issues/inputs/issue-ignore-any-milestones-input)                                  | Allow to ignore the processing of issues that contains one of those milestones (multiline).                                                            |                       |
+| [issue-ignore-all-milestones](issues/inputs/issue-ignore-all-milestones-input)                                  | Allow to ignore the processing of issues that contains any milestones.                                                                                 | `false`               |
 | [pull-request-stale-label](pull-requests/inputs/pull-request-stale-label-input)                                 | The label that will be added to the pull request when it is stale.                                                                                     | `stale`               |
 | [pull-request-ignore-all-labels](pull-requests/inputs/pull-request-ignore-all-labels-input)                     | Allow to ignore the processing of pull requests that contains any labels.                                                                              | `false`               |
 | [pull-request-ignore-any-labels](pull-requests/inputs/pull-request-ignore-any-labels-input)                     | Allow to ignore the processing of pull requests that contains one of those labels (multiline).                                                         |                       |
