--- a/documentation/docs/06-issues/01-inputs/01-all-inputs.mdx
+++ b/documentation/docs/06-issues/01-inputs/01-all-inputs.mdx
@@ -32,3 +32,4 @@ The list of all issues the inputs.
 | [issue-only-any-project-cards](issue-only-any-project-cards-input)           | Only allow the processing of issues that contains one of those project cards (multiline).                                                       |         |
 | [issue-only-any-milestones](issue-only-any-milestones-input)                 | Only allow the processing of issues that contains one of those milestones (multiline).                                                          |         |
 | [issue-ignore-any-milestones](issue-ignore-any-milestones-input)             | Allow to ignore the processing of issues that contains one of those milestones (multiline).                                                     |         |
+| [issue-ignore-all-milestones](issue-ignore-all-milestones-input)             | Allow to ignore the processing of issues that contains any milestones.                                                                          | `false` |
