--- a/documentation/docs/03-all-inputs.mdx
+++ b/documentation/docs/03-all-inputs.mdx
@@ -61,3 +61,4 @@ The list of all the inputs.
 | [pull-request-only-any-project-cards](pull-requests/inputs/pull-request-only-any-project-cards-input)           | Only allow the processing of pull requests that contains one of those project cards (multiline).                                                       |                       |
 | [pull-request-only-any-milestones](pull-requests/inputs/pull-request-only-any-milestones-input)                 | Only allow the processing of pull requests that contains one of those milestones (multiline).                                                          |                       |
 | [pull-request-ignore-any-milestones](pull-requests/inputs/pull-request-ignore-any-milestones-input)             | Allow to ignore the processing of pull requests that contains one of those milestones (multiline).                                                     |                       |
+| [pull-request-ignore-all-milestones](pull-requests/inputs/pull-request-ignore-all-milestones-input)             | Allow to ignore the processing of pull requests that contains any milestones.                                                                          | `false`               |
