--- a/documentation/docs/08-pull-requests/01-inputs/01-all-inputs.mdx
+++ b/documentation/docs/08-pull-requests/01-inputs/01-all-inputs.mdx
@@ -35,3 +35,4 @@ The list of all the pull requests inputs.
 | [pull-request-only-any-project-cards](pull-request-only-any-project-cards-input)           | Only allow the processing of pull requests that contains one of those project cards (multiline).                                                       |         |
 | [pull-request-only-any-milestones](pull-request-only-any-milestones-input)                 | Only allow the processing of pull requests that contains one of those milestones (multiline).                                                          |         |
 | [pull-request-ignore-any-milestones](pull-request-ignore-any-milestones-input)             | Allow to ignore the processing of pull requests that contains one of those milestones (multiline).                                                     |         |
+| [pull-request-ignore-all-milestones](pull-request-ignore-all-milestones-input)             | Allow to ignore the processing of pull requests that contains any milestones.                                                                          | `true`  |
