feat(inputs): add new inputs to only process items with specific assignees
Add the input `issue-only-any-assignees`.
Add the input `pull-request-only-any-assignees`.
You can use them to only process issues and PRs which have one of the specified assignee(s).
Closes #559

--- a/documentation/docs/06-issues/01-inputs/01-all-inputs.mdx
+++ b/documentation/docs/06-issues/01-inputs/01-all-inputs.mdx
@@ -33,3 +33,4 @@ The list of all issues the inputs.
 | [issue-only-any-milestones](issue-only-any-milestones-input)                 | Only allow the processing of issues that contains one of those milestones (multiline).                                                          |         |
 | [issue-ignore-any-milestones](issue-ignore-any-milestones-input)             | Allow to ignore the processing of issues that contains one of those milestones (multiline).                                                     |         |
 | [issue-ignore-all-milestones](issue-ignore-all-milestones-input)             | Allow to ignore the processing of issues that contains any milestones.                                                                          | `false` |
+| [issue-only-any-assignees](issue-only-any-assignees-input)                   | Only allow the processing of issues that contains one of those assignees (multiline).                                                           |         |
