--- a/documentation/docs/06-issues/01-inputs/01-all-inputs.mdx
+++ b/documentation/docs/06-issues/01-inputs/01-all-inputs.mdx
@@ -34,3 +34,4 @@ The list of all issues the inputs.
 | [issue-ignore-any-milestones](issue-ignore-any-milestones-input)             | Allow to ignore the processing of issues that contains one of those milestones (multiline).                                                     |         |
 | [issue-ignore-all-milestones](issue-ignore-all-milestones-input)             | Allow to ignore the processing of issues that contains any milestones.                                                                          | `false` |
 | [issue-only-any-assignees](issue-only-any-assignees-input)                   | Only allow the processing of issues that contains one of those assignees (multiline).                                                           |         |
+| [issue-only-with-assignees](issue-only-with-assignees-input)                 | Only allow the processing of issues that contains at least one assignee.                                                                        | `false` |
