feat(prs): add new input `pull-request-only-with-assignees`
This new input allows to only process pull requests containing at least one assignee.
Closes #313

--- a/documentation/docs/03-all-inputs.mdx
+++ b/documentation/docs/03-all-inputs.mdx
@@ -65,3 +65,4 @@ The list of all the inputs.
 | [pull-request-ignore-any-milestones](pull-requests/inputs/pull-request-ignore-any-milestones-input)             | Allow to ignore the processing of pull requests that contains one of those milestones (multiline).                                                     |                       |
 | [pull-request-ignore-all-milestones](pull-requests/inputs/pull-request-ignore-all-milestones-input)             | Allow to ignore the processing of pull requests that contains any milestones.                                                                          | `false`               |
 | [pull-request-only-any-assignees](pull-requests/inputs/pull-request-only-any-assignees-input)                   | Only allow the processing of pull requests that contains one of those assignees (multiline).                                                           |                       |
+| [pull-request-only-with-assignees](pull-requests/inputs/pull-request-only-with-assignees-input)                 | Only allow the processing of pull requests that contains at least one assignee.                                                                        | `false`               |
