--- a/documentation/docs/08-pull-requests/01-inputs/01-all-inputs.mdx
+++ b/documentation/docs/08-pull-requests/01-inputs/01-all-inputs.mdx
@@ -37,3 +37,4 @@ The list of all the pull requests inputs.
 | [pull-request-ignore-any-milestones](pull-request-ignore-any-milestones-input)             | Allow to ignore the processing of pull requests that contains one of those milestones (multiline).                                                     |         |
 | [pull-request-ignore-all-milestones](pull-request-ignore-all-milestones-input)             | Allow to ignore the processing of pull requests that contains any milestones.                                                                          | `true`  |
 | [pull-request-only-any-assignees](pull-request-only-any-assignees-input)                   | Only allow the processing of pull requests that contains one of those assignees (multiline).                                                           |         |
+| [pull-request-only-with-assignees](pull-request-only-with-assignees-input)                 | Only allow the processing of pull requests that contains at least one assignee.                                                                        | `false` |
