feat(issues): add new input `issue-only-with-project-cards`
This new input allows to only process issues containing at least one project card.
Closes #807

--- a/documentation/docs/06-issues/01-inputs/01-all-inputs.mdx
+++ b/documentation/docs/06-issues/01-inputs/01-all-inputs.mdx
@@ -24,6 +24,7 @@ The list of all issues the inputs.
 | **Project cards**                                                            |                                                                                                                                                 |         |
 | [issue-ignore-all-project-cards](issue-ignore-all-project-cards-input)       | Allow to ignore the processing of issues that contains any project cards.                                                                       | `false` |
 | [issue-ignore-any-project-cards](issue-ignore-any-project-cards-input)       | Allow to ignore the processing of issues that contains one of those project cards (multiline).                                                  |         |
+| [issue-only-with-project-cards](issue-only-with-project-cards-input)         | Only allow the processing of issues that contains at least one project card.                                                                    | `false` |
 | [issue-only-any-project-cards](issue-only-any-project-cards-input)           | Only allow the processing of issues that contains one of those project cards (multiline).                                                       |         |
 | **Milestones**                                                               |                                                                                                                                                 |         |
 | [issue-ignore-all-milestones](issue-ignore-all-milestones-input)             | Allow to ignore the processing of issues that contains any milestones.                                                                          | `false` |
