--- a/documentation/docs/03-all-inputs.mdx
+++ b/documentation/docs/03-all-inputs.mdx
@@ -41,6 +41,7 @@ The list of all the inputs.
 | [issue-only-any-project-cards](issues/inputs/issue-only-any-project-cards-input)                                | Only allow the processing of issues that contains one of those project cards (multiline).                                                              |                       |
 | [pull-request-ignore-all-project-cards](pull-requests/inputs/pull-request-ignore-all-project-cards-input)       | Allow to ignore the processing of pull requests that contains any project cards.                                                                       | `false`               |
 | [pull-request-ignore-any-project-cards](pull-requests/inputs/pull-request-ignore-any-project-cards-input)       | Allow to ignore the processing of pull requests that contains one of those project cards (multiline).                                                  |                       |
+| [pull-request-only-with-project-cards](pull-requests/inputs/pull-request-only-with-project-cards-input)         | Only allow the processing of pull requests that contains at least one project card.                                                                    | `false`               |
 | [pull-request-only-any-project-cards](pull-requests/inputs/pull-request-only-any-project-cards-input)           | Only allow the processing of pull requests that contains one of those project cards (multiline).                                                       |                       |
 | **Milestones**                                                                                                  |                                                                                                                                                        |                       |
 | [issue-ignore-all-milestones](issues/inputs/issue-ignore-all-milestones-input)                                  | Allow to ignore the processing of issues that contains any milestones.                                                                                 | `false`               |
