--- a/documentation/docs/08-pull-requests/01-inputs/01-all-inputs.mdx
+++ b/documentation/docs/08-pull-requests/01-inputs/01-all-inputs.mdx
@@ -24,6 +24,7 @@ The list of all the pull requests inputs.
 | **Project cards**                                                                          |                                                                                                                                                        |         |
 | [pull-request-ignore-all-project-cards](pull-request-ignore-all-project-cards-input)       | Allow to ignore the processing of pull requests that contains any project cards.                                                                       | `false` |
 | [pull-request-ignore-any-project-cards](pull-request-ignore-any-project-cards-input)       | Allow to ignore the processing of pull requests that contains one of those project cards (multiline).                                                  |         |
+| [pull-request-only-with-project-cards](pull-request-only-with-project-cards-input)         | Only allow the processing of pull requests that contains at least one project card.                                                                    | `false` |
 | [pull-request-only-any-project-cards](pull-request-only-any-project-cards-input)           | Only allow the processing of pull requests that contains one of those project cards (multiline).                                                       |         |
 | **Milestones**                                                                             |                                                                                                                                                        |         |
 | [pull-request-ignore-all-milestones](pull-request-ignore-all-milestones-input)             | Allow to ignore the processing of pull requests that contains any milestones.                                                                          | `true`  |
