feat(issues): add new input `issue-only-with-milestones`
This new input allows to only process issues containing at least one milestone.
Closes #808

--- a/documentation/docs/03-all-inputs.mdx
+++ b/documentation/docs/03-all-inputs.mdx
@@ -46,6 +46,7 @@ The list of all the inputs.
 | **Milestones**                                                                                                  |                                                                                                                                                        |                       |
 | [issue-ignore-all-milestones](issues/inputs/issue-ignore-all-milestones-input)                                  | Allow to ignore the processing of issues that contains any milestones.                                                                                 | `false`               |
 | [issue-ignore-any-milestones](issues/inputs/issue-ignore-any-milestones-input)                                  | Allow to ignore the processing of issues that contains one of those milestones (multiline).                                                            |                       |
+| [issue-only-with-milestones](issues/inputs/issue-only-with-milestones-input)                                    | Only allow the processing of issues that contains at least one milestone.                                                                              | `false`               |
 | [issue-only-any-milestones](issues/inputs/issue-only-any-milestones-input)                                      | Only allow the processing of issues that contains one of those milestones (multiline).                                                                 |                       |
 | [pull-request-ignore-all-milestones](pull-requests/inputs/pull-request-ignore-all-milestones-input)             | Allow to ignore the processing of pull requests that contains any milestones.                                                                          | `false`               |
 | [pull-request-ignore-any-milestones](pull-requests/inputs/pull-request-ignore-any-milestones-input)             | Allow to ignore the processing of pull requests that contains one of those milestones (multiline).                                                     |                       |
