--- a/documentation/docs/06-issues/01-inputs/01-all-inputs.mdx
+++ b/documentation/docs/06-issues/01-inputs/01-all-inputs.mdx
@@ -29,6 +29,7 @@ The list of all issues the inputs.
 | **Milestones**                                                               |                                                                                                                                                 |         |
 | [issue-ignore-all-milestones](issue-ignore-all-milestones-input)             | Allow to ignore the processing of issues that contains any milestones.                                                                          | `false` |
 | [issue-ignore-any-milestones](issue-ignore-any-milestones-input)             | Allow to ignore the processing of issues that contains one of those milestones (multiline).                                                     |         |
+| [issue-only-with-milestones](issue-only-with-milestones-input)               | Only allow the processing of issues that contains at least one milestone.                                                                       | `false` |
 | [issue-only-any-milestones](issue-only-any-milestones-input)                 | Only allow the processing of issues that contains one of those milestones (multiline).                                                          |         |
 | **Comments**                                                                 |                                                                                                                                                 |         |
 | [issue-stale-comment](issue-stale-comment-input)                             | The comment that will be sent once the issue is stale (keep empty to not send a comment).                                                       |         |
