feat(prs): add new input `pull-request-only-with-milestones`
This new input allows to only process pull requests containing at least one milestone.
Closes #808

--- a/documentation/docs/03-all-inputs.mdx
+++ b/documentation/docs/03-all-inputs.mdx
@@ -50,6 +50,7 @@ The list of all the inputs.
 | [issue-only-any-milestones](issues/inputs/issue-only-any-milestones-input)                                      | Only allow the processing of issues that contains one of those milestones (multiline).                                                                 |                       |
 | [pull-request-ignore-all-milestones](pull-requests/inputs/pull-request-ignore-all-milestones-input)             | Allow to ignore the processing of pull requests that contains any milestones.                                                                          | `false`               |
 | [pull-request-ignore-any-milestones](pull-requests/inputs/pull-request-ignore-any-milestones-input)             | Allow to ignore the processing of pull requests that contains one of those milestones (multiline).                                                     |                       |
+| [pull-request-only-with-milestones](pull-requests/inputs/pull-request-only-with-milestones-input)               | Only allow the processing of pull requests that contains at least one milestone.                                                                       | `false`               |
 | [pull-request-only-any-milestones](pull-requests/inputs/pull-request-only-any-milestones-input)                 | Only allow the processing of pull requests that contains one of those milestones (multiline).                                                          |                       |
 | **Comments**                                                                                                    |                                                                                                                                                        |                       |
 | [issue-stale-comment](issues/inputs/issue-stale-comment-input)                                                  | The comment that will be sent once the issue is stale (keep empty to not send a comment).                                                              |                       |
