--- a/documentation/docs/08-pull-requests/01-inputs/01-all-inputs.mdx
+++ b/documentation/docs/08-pull-requests/01-inputs/01-all-inputs.mdx
@@ -27,8 +27,9 @@ The list of all the pull requests inputs.
 | [pull-request-only-with-project-cards](pull-request-only-with-project-cards-input)         | Only allow the processing of pull requests that contains at least one project card.                                                                    | `false` |
 | [pull-request-only-any-project-cards](pull-request-only-any-project-cards-input)           | Only allow the processing of pull requests that contains one of those project cards (multiline).                                                       |         |
 | **Milestones**                                                                             |                                                                                                                                                        |         |
-| [pull-request-ignore-all-milestones](pull-request-ignore-all-milestones-input)             | Allow to ignore the processing of pull requests that contains any milestones.                                                                          | `true`  |
+| [pull-request-ignore-all-milestones](pull-request-ignore-all-milestones-input)             | Allow to ignore the processing of pull requests that contains any milestones.                                                                          | `false` |
 | [pull-request-ignore-any-milestones](pull-request-ignore-any-milestones-input)             | Allow to ignore the processing of pull requests that contains one of those milestones (multiline).                                                     |         |
+| [pull-request-only-with-milestones](pull-request-only-with-milestones-input)               | Only allow the processing of pull requests that contains at least one milestone.                                                                       | `false` |
 | [pull-request-only-any-milestones](pull-request-only-any-milestones-input)                 | Only allow the processing of pull requests that contains one of those milestones (multiline).                                                          |         |
 | **Comments**                                                                               |                                                                                                                                                        |         |
 | [pull-request-stale-comment](pull-request-stale-comment-input)                             | The comment that will be sent once the pull request is stale (keep empty to not send a comment).                                                       |         |
