feat(close-reason): add new inputs `issue-close-reason` and `pull-request-close-reason`
Those inputs allow you to specify the reason for closing an item.
Closes #779
BREAKING CHANGE:
The close reason will now be by default 'NOT_PLANNED' instead of 'COMPLETED' since it makes more sense.
If you want to change the new default behavior, you can use these inputs:
issue-close-reason: 'completed'
pull-request-close-reason: 'completed'

--- a/documentation/docs/03-all-inputs.mdx
+++ b/documentation/docs/03-all-inputs.mdx
@@ -68,14 +68,16 @@ The list of all the inputs.
 | [pull-request-add-labels-after-close](pull-requests/inputs/pull-request-add-labels-after-close-input)           | A list of labels added when the processing close the pull request (multiline).                                                                         |                       |
 | [pull-request-delete-branch-after-close](pull-requests/inputs/pull-request-delete-branch-after-close-input)     | Delete the branch when the processing close the pull request.                                                                                          | `false`               |
 | **Limiters**                                                                                                    |                                                                                                                                                        |                       |
-| [issue-limit-api-queries-count](issues/inputs/issue-limit-api-queries-count-input)                              | Limit the quantity of API queries calls performed during the processing of issues (-1 for unlimited).                                                  | `-1`                  |
-| [issue-limit-api-mutations-count](issues/inputs/issue-limit-api-mutations-count-input)                          | Limit the quantity of API mutations calls performed during the processing of issues (-1 for unlimited).                                                | `-1`                  |
+| [issue-limit-api-queries-count](issues/inputs/issue-limit-api-queries-count-input)                              | Limit the quantity of API queries calls performed during the processing of issues (`-1` for unlimited).                                                | `-1`                  |
+| [issue-limit-api-mutations-count](issues/inputs/issue-limit-api-mutations-count-input)                          | Limit the quantity of API mutations calls performed during the processing of issues (`-1` for unlimited).                                              | `-1`                  |
 | [issue-ignore-before-creation-date](issues/inputs/issue-ignore-before-creation-date-input)                      | Allow to ignore the processing of issues that were created before this date ([ISO 8601](https://moment.github.io/luxon/#/parsing?id=iso-8601)).        |                       |
-| [pull-request-limit-api-queries-count](pull-requests/inputs/pull-request-limit-api-queries-count-input)         | Limit the quantity of API queries calls performed during the processing of pull requests (-1 for unlimited).                                           | `-1`                  |
-| [pull-request-limit-api-mutations-count](pull-requests/inputs/pull-request-limit-api-mutations-count-input)     | Limit the quantity of API mutations calls performed during the processing of pull requests (-1 for unlimited).                                         | `-1`                  |
+| [pull-request-limit-api-queries-count](pull-requests/inputs/pull-request-limit-api-queries-count-input)         | Limit the quantity of API queries calls performed during the processing of pull requests (`-1` for unlimited).                                         | `-1`                  |
+| [pull-request-limit-api-mutations-count](pull-requests/inputs/pull-request-limit-api-mutations-count-input)     | Limit the quantity of API mutations calls performed during the processing of pull requests (`-1` for unlimited).                                       | `-1`                  |
 | [pull-request-ignore-before-creation-date](pull-requests/inputs/pull-request-ignore-before-creation-date-input) | Allow to ignore the processing of pull requests that were created before this date ([ISO 8601](https://moment.github.io/luxon/#/parsing?id=iso-8601)). |                       |
 | [pull-request-ignore-draft](pull-requests/inputs/pull-request-ignore-draft-input)                               | Allow to ignore the processing of pull requests that are drafts.                                                                                       | `false`               |
 | **Others**                                                                                                      |                                                                                                                                                        |                       |
 | [issue-processing](issues/inputs/issue-processing-input)                                                        | Allow to process the issues.                                                                                                                           | `true`                |
+| [issue-close-reason](issues/inputs/issue-close-reason-input)                                                    | The reason when closing an issue (`completed` or `not planned`).                                                                                       | `not planned`         |
 | [pull-request-processing](pull-requests/inputs/pull-request-processing-input)                                   | Allow to process the pull requests.                                                                                                                    | `true`                |
+| [pull-request-close-reason](pull-requests/inputs/pull-request-close-reason-input)                               | The reason when closing a pull request (`completed` or `not planned`).                                                                                 | `not planned`         |
 | [pull-request-to-draft-instead-of-stale](pull-requests/inputs/pull-request-to-draft-instead-of-stale-input)     | Convert the pull request to a draft pull request instead of handling it as a stale candidate.                                                          | `false`               |
