--- a/documentation/docs/06-issues/01-inputs/41-close-comment-input.mdx
+++ b/documentation/docs/06-issues/01-inputs/41-close-comment-input.mdx
@@ -8,6 +8,7 @@ tags:
   - Issues
   - Inputs
   - Comments
+  - Closing
 ---
 
 ### Input {#input}
@@ -21,9 +22,17 @@ Default value: `''`
 This input will let you define the comment that will be added on the issues when they are closed after being stale for too long during the processing.  
 This can be useful if you wish to improve the communication and the process on how to handle an unwanted closed issue.
 
+:::info
+
+You can also specify the reason for closing this issue by using the [close reason input](issue-close-reason-input),
+add labels onto it by using the [add labels after close input](issue-add-labels-after-close-input)
+and define the number of days before closing it by using the [days before close input](issue-days-before-close-input).
+
+:::
+
 ### Example {#example}
 
-```yml {6}
+```yml {6-7}
 # ...
 name: Stale
 id: stale
