--- a/documentation/docs/01-introduction.mdx
+++ b/documentation/docs/01-introduction.mdx
@@ -5,7 +5,7 @@ description: |
   Introduction and presentation of what is the Sonia-corporation stale action.
   What is the mindset behind this action.
   What are the main features.
-  How and why it was crated.
+  How and why it was created.
 tags:
   - Introduction
 ---
