--- a/documentation/docs/06-issues/01-inputs/01-all-inputs.mdx
+++ b/documentation/docs/06-issues/01-inputs/01-all-inputs.mdx
@@ -10,38 +10,39 @@ tags:
 
 The list of all issues the inputs.
 
-| Input                                                                        | Description                                                                                                                                     | Default |
-| ---------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------- | ------- |
-| **Labels**                                                                   |                                                                                                                                                 |         |
-| [issue-stale-label](issue-stale-label-input)                                 | The label that will be added to the issue when it is stale.                                                                                     | `stale` |
-| [issue-ignore-all-labels](issue-ignore-all-labels-input)                     | Allow to ignore the processing of issues that contains any labels.                                                                              | `false` |
-| [issue-ignore-any-labels](issue-ignore-any-labels-input)                     | Allow to ignore the processing of issues that contains one of those labels (multiline).                                                         |         |
-| **Assignees**                                                                |                                                                                                                                                 |         |
-| [issue-ignore-all-assignees](issue-ignore-all-assignees-input)               | Allow to ignore the processing of issues that contains any assignees.                                                                           | `false` |
-| [issue-ignore-any-assignees](issue-ignore-any-assignees-input)               | Allow to ignore the processing of issues that contains one of those assignees (multiline).                                                      |         |
-| [issue-only-with-assignees](issue-only-with-assignees-input)                 | Only allow the processing of issues that contains at least one assignee.                                                                        | `false` |
-| [issue-only-any-assignees](issue-only-any-assignees-input)                   | Only allow the processing of issues that contains one of those assignees (multiline).                                                           |         |
-| **Project cards**                                                            |                                                                                                                                                 |         |
-| [issue-ignore-all-project-cards](issue-ignore-all-project-cards-input)       | Allow to ignore the processing of issues that contains any project cards.                                                                       | `false` |
-| [issue-ignore-any-project-cards](issue-ignore-any-project-cards-input)       | Allow to ignore the processing of issues that contains one of those project cards (multiline).                                                  |         |
-| [issue-only-with-project-cards](issue-only-with-project-cards-input)         | Only allow the processing of issues that contains at least one project card.                                                                    | `false` |
-| [issue-only-any-project-cards](issue-only-any-project-cards-input)           | Only allow the processing of issues that contains one of those project cards (multiline).                                                       |         |
-| **Milestones**                                                               |                                                                                                                                                 |         |
-| [issue-ignore-all-milestones](issue-ignore-all-milestones-input)             | Allow to ignore the processing of issues that contains any milestones.                                                                          | `false` |
-| [issue-ignore-any-milestones](issue-ignore-any-milestones-input)             | Allow to ignore the processing of issues that contains one of those milestones (multiline).                                                     |         |
-| [issue-only-with-milestones](issue-only-with-milestones-input)               | Only allow the processing of issues that contains at least one milestone.                                                                       | `false` |
-| [issue-only-any-milestones](issue-only-any-milestones-input)                 | Only allow the processing of issues that contains one of those milestones (multiline).                                                          |         |
-| **Comments**                                                                 |                                                                                                                                                 |         |
-| [issue-stale-comment](issue-stale-comment-input)                             | The comment that will be sent once the issue is stale (keep empty to not send a comment).                                                       |         |
-| [issue-close-comment](issue-close-comment-input)                             | The comment that will be sent once the issue is close (keep empty to not send a comment).                                                       |         |
-| **Durations**                                                                |                                                                                                                                                 |         |
-| [issue-days-before-stale](issue-days-before-stale-input)                     | The number of days until the issue is considered as stale.                                                                                      | `30`    |
-| [issue-add-labels-after-stale](issue-add-labels-after-stale-input)           | A list of labels added when the processing stale the issue (multiline).                                                                         |         |
-| [issue-days-before-close](issue-days-before-close-input)                     | The number of days until a stale issue is considered as closed.                                                                                 | `10`    |
-| [issue-add-labels-after-close](issue-add-labels-after-close-input)           | A list of labels added when the processing close the issue (multiline).                                                                         |         |
-| **Limiters**                                                                 |                                                                                                                                                 |         |
-| [issue-limit-api-queries-count](issue-limit-api-queries-count-input)         | Limit the quantity of API queries calls performed during the processing of issues (-1 for unlimited).                                           | `-1`    |
-| [issue-limit-api-mutations-count](issue-limit-api-mutations-count-input)     | Limit the quantity of API mutations calls performed during the processing of issues (-1 for unlimited).                                         | `-1`    |
-| [issue-ignore-before-creation-date](issue-ignore-before-creation-date-input) | Allow to ignore the processing of issues that were created before this date ([ISO 8601](https://moment.github.io/luxon/#/parsing?id=iso-8601)). |         |
-| **Others**                                                                   |                                                                                                                                                 |         |
-| [issue-processing](issue-processing-input)                                   | Allow to process the issues.                                                                                                                    | `true`  |
+| Input                                                                        | Description                                                                                                                                     | Default       |
+| ---------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------- | ------------- |
+| **Labels**                                                                   |                                                                                                                                                 |               |
+| [issue-stale-label](issue-stale-label-input)                                 | The label that will be added to the issue when it is stale.                                                                                     | `stale`       |
+| [issue-ignore-all-labels](issue-ignore-all-labels-input)                     | Allow to ignore the processing of issues that contains any labels.                                                                              | `false`       |
+| [issue-ignore-any-labels](issue-ignore-any-labels-input)                     | Allow to ignore the processing of issues that contains one of those labels (multiline).                                                         |               |
+| **Assignees**                                                                |                                                                                                                                                 |               |
+| [issue-ignore-all-assignees](issue-ignore-all-assignees-input)               | Allow to ignore the processing of issues that contains any assignees.                                                                           | `false`       |
+| [issue-ignore-any-assignees](issue-ignore-any-assignees-input)               | Allow to ignore the processing of issues that contains one of those assignees (multiline).                                                      |               |
+| [issue-only-with-assignees](issue-only-with-assignees-input)                 | Only allow the processing of issues that contains at least one assignee.                                                                        | `false`       |
+| [issue-only-any-assignees](issue-only-any-assignees-input)                   | Only allow the processing of issues that contains one of those assignees (multiline).                                                           |               |
+| **Project cards**                                                            |                                                                                                                                                 |               |
+| [issue-ignore-all-project-cards](issue-ignore-all-project-cards-input)       | Allow to ignore the processing of issues that contains any project cards.                                                                       | `false`       |
+| [issue-ignore-any-project-cards](issue-ignore-any-project-cards-input)       | Allow to ignore the processing of issues that contains one of those project cards (multiline).                                                  |               |
+| [issue-only-with-project-cards](issue-only-with-project-cards-input)         | Only allow the processing of issues that contains at least one project card.                                                                    | `false`       |
+| [issue-only-any-project-cards](issue-only-any-project-cards-input)           | Only allow the processing of issues that contains one of those project cards (multiline).                                                       |               |
+| **Milestones**                                                               |                                                                                                                                                 |               |
+| [issue-ignore-all-milestones](issue-ignore-all-milestones-input)             | Allow to ignore the processing of issues that contains any milestones.                                                                          | `false`       |
+| [issue-ignore-any-milestones](issue-ignore-any-milestones-input)             | Allow to ignore the processing of issues that contains one of those milestones (multiline).                                                     |               |
+| [issue-only-with-milestones](issue-only-with-milestones-input)               | Only allow the processing of issues that contains at least one milestone.                                                                       | `false`       |
+| [issue-only-any-milestones](issue-only-any-milestones-input)                 | Only allow the processing of issues that contains one of those milestones (multiline).                                                          |               |
+| **Comments**                                                                 |                                                                                                                                                 |               |
+| [issue-stale-comment](issue-stale-comment-input)                             | The comment that will be sent once the issue is stale (keep empty to not send a comment).                                                       |               |
+| [issue-close-comment](issue-close-comment-input)                             | The comment that will be sent once the issue is close (keep empty to not send a comment).                                                       |               |
+| **Durations**                                                                |                                                                                                                                                 |               |
+| [issue-days-before-stale](issue-days-before-stale-input)                     | The number of days until the issue is considered as stale.                                                                                      | `30`          |
+| [issue-add-labels-after-stale](issue-add-labels-after-stale-input)           | A list of labels added when the processing stale the issue (multiline).                                                                         |               |
+| [issue-days-before-close](issue-days-before-close-input)                     | The number of days until a stale issue is considered as closed.                                                                                 | `10`          |
+| [issue-add-labels-after-close](issue-add-labels-after-close-input)           | A list of labels added when the processing close the issue (multiline).                                                                         |               |
+| **Limiters**                                                                 |                                                                                                                                                 |               |
+| [issue-limit-api-queries-count](issue-limit-api-queries-count-input)         | Limit the quantity of API queries calls performed during the processing of issues (`-1` for unlimited).                                         | `-1`          |
+| [issue-limit-api-mutations-count](issue-limit-api-mutations-count-input)     | Limit the quantity of API mutations calls performed during the processing of issues (`-1` for unlimited).                                       | `-1`          |
+| [issue-ignore-before-creation-date](issue-ignore-before-creation-date-input) | Allow to ignore the processing of issues that were created before this date ([ISO 8601](https://moment.github.io/luxon/#/parsing?id=iso-8601)). |               |
+| **Others**                                                                   |                                                                                                                                                 |               |
+| [issue-processing](issue-processing-input)                                   | Allow to process the issues.                                                                                                                    | `true`        |
+| [issue-close-reason](issue-close-reason-input)                               | The reason when closing an issue (`completed` or `not planned`).                                                                                | `not planned` |
