--- a/documentation/docs/06-issues/01-inputs/52-days-before-close-input.mdx
+++ b/documentation/docs/06-issues/01-inputs/52-days-before-close-input.mdx
@@ -7,6 +7,7 @@ description: |
 tags:
   - Issues
   - Inputs
+  - Closing
 ---
 
 ### Input {#input}
@@ -25,6 +26,14 @@ The number of days is calculated based on the stale date (the stale label creati
 
 Assuming that an issue is stale since 9 days and this input is configured to close after 10 days.  
 The issue will be closed tomorrow if no update occur until then.
+
+:::info
+
+You can also specify the reason for closing this issue by using the [close reason input](issue-close-reason-input),
+add labels onto it by using the [add labels after close input](issue-add-labels-after-close-input)
+and add a comment to explain why it was closed by using the [close comment input](issue-close-comment-input).
+
+:::
 
 ### Example {#example}
 
