--- a/documentation/docs/06-issues/01-inputs/53-add-labels-after-close-input.mdx
+++ b/documentation/docs/06-issues/01-inputs/53-add-labels-after-close-input.mdx
@@ -8,6 +8,7 @@ tags:
   - Issues
   - Inputs
   - Labels
+  - Closing
 ---
 
 ### Input {#input}
@@ -25,6 +26,14 @@ This can be useful if you wish to easily add extra labels to improve your triage
 
 The labels must be real labels, existing inside your repository list of labels (_github.com/your-organization/your-repository/labels_).  
 If not, the GitHub API will throw an error.
+
+:::
+
+:::info
+
+You can also specify the reason for closing this issue by using the [close reason input](issue-close-reason-input),
+add a comment to explain why it was closed by using the [close comment input](issue-close-comment-input)
+and define the number of days before closing it by using the [days before close input](issue-days-before-close-input).
 
 :::
 
