--- a/documentation/docs/08-pull-requests/01-inputs/40-stale-comment-input.mdx
+++ b/documentation/docs/08-pull-requests/01-inputs/40-stale-comment-input.mdx
@@ -23,7 +23,7 @@ This can be useful if you wish to improve the call to action so that watchers ca
 
 ### Example {#example}
 
-```yml {6}
+```yml {6-7}
 # ...
 name: Stale
 id: stale
