feat(issues): add new input `issue-remove-labels-after-stale`
This new input will let you remove some label(s) when the stale occur on issues.
Closes #858.

--- a/documentation/docs/03-all-inputs.mdx
+++ b/documentation/docs/03-all-inputs.mdx
@@ -74,6 +74,7 @@ The list of all the inputs.
 | [issue-processing](issues/inputs/issue-processing-input)                                                        | Allow to process the issues.                                                                                                                           | `true`                |
 | [issue-close-reason](issues/inputs/issue-close-reason-input)                                                    | The reason when closing an issue (`completed` or `not planned`).                                                                                       | `not planned`         |
 | [issue-add-labels-after-stale](issues/inputs/issue-add-labels-after-stale-input)                                | A list of labels added when the processing stale the issue (multiline).                                                                                |                       |
+| [issue-remove-labels-after-stale](issues/inputs/issue-remove-labels-after-stale-input)                          | A list of labels removed when the processing stale the issue (multiline).                                                                              |                       |
 | [issue-add-labels-after-close](issues/inputs/issue-add-labels-after-close-input)                                | A list of labels added when the processing close the issue (multiline).                                                                                |                       |
 | [pull-request-processing](pull-requests/inputs/pull-request-processing-input)                                   | Allow to process the pull requests.                                                                                                                    | `true`                |
 | [pull-request-close-reason](pull-requests/inputs/pull-request-close-reason-input)                               | The reason when closing a pull request (`completed` or `not planned`).                                                                                 | `not planned`         |
