--- a/documentation/docs/06-issues/01-inputs/01-all-inputs.mdx
+++ b/documentation/docs/06-issues/01-inputs/01-all-inputs.mdx
@@ -45,4 +45,5 @@ The list of all issues the inputs.
 | [issue-processing](issue-processing-input)                                   | Allow to process the issues.                                                                                                                    | `true`        |
 | [issue-close-reason](issue-close-reason-input)                               | The reason when closing an issue (`completed` or `not planned`).                                                                                | `not planned` |
 | [issue-add-labels-after-stale](issue-add-labels-after-stale-input)           | A list of labels added when the processing stale the issue (multiline).                                                                         |               |
+| [issue-remove-labels-after-stale](issue-remove-labels-after-stale-input)     | A list of labels removed when the processing stale the issue (multiline).                                                                       |               |
 | [issue-add-labels-after-close](issue-add-labels-after-close-input)           | A list of labels added when the processing close the issue (multiline).                                                                         |               |
